src/objects/Topic__c.object
<CustomObject>
    <fields>
        <fullName>Content__c</fullName>
        <label>Content</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>like__c</fullName>
        <defaultValue>false</defaultValue>
        <label>like</label>
        <type>Checkbox</type>
    </fields>
    <label>Topic</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Topic Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Topics</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>